# scan-c-dev

./: .gitignore  .gitignore.swp  CMakeLists.txt  README.md
include/: lidar.h  osutil.h
src/: CMakeLists.txt  lidar.c  main.c  mqtt_config.txt  osutil.c
